Add dahu pseudo-distance computation

--- a/Dahu.ipynb
+++ b/Dahu.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = imread(\"/home/baptou/Pictures/ecssd/gray_png/0001.png\")"
+    "img = imread(\"/home/baptou/Pictures/ecssd/gray_png/0022.png\")"
    ]
   },
   {
@@ -71,23 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bf12169-03c7-4d2e-af4f-957e692a72b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(13, 8))\n",
-    "plt.subplot(131)\n",
-    "plt.imshow(img, cmap=\"gray\")\n",
-    "plt.subplot(132)\n",
-    "plt.imshow(m, cmap=\"gray\")\n",
-    "plt.subplot(133)\n",
-    "plt.imshow(M, cmap=\"gray\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "866669dd-a790-4c2a-949d-f8c9045217a6",
    "metadata": {},
    "outputs": [],
@@ -103,6 +86,63 @@
    "outputs": [],
    "source": [
     "show_image(D, \"inferno\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf76e05a-256b-4193-8137-72271e06cbd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dahu_distance_transform(m: np.ndarray, M: np.ndarray) -> np.ndarray:\n",
+    "    deja_vu = np.zeros(m.shape, dtype=bool)\n",
+    "    min_img = np.empty_like(m)\n",
+    "    max_img = np.empty_like(m)\n",
+    "    F = np.empty_like(m)\n",
+    "    q = PQueue()\n",
+    "\n",
+    "    F[0, 0] = m[0, 0]\n",
+    "    min_img[0, 0] = m[0, 0]\n",
+    "    max_img[0, 0] = m[0, 0]\n",
+    "    deja_vu[0, 0] = True\n",
+    "    q.push((0, 0), 0)\n",
+    "\n",
+    "    while not q.empty():\n",
+    "        (l, c) = q.pop()\n",
+    "        d = q.distance\n",
+    "        for dl, dc in C4:\n",
+    "            nl, nc = l + dl, c + dc\n",
+    "            if in_domain(m.shape, nl, nc) and not deja_vu[nl, nc]:\n",
+    "                f = clamp(F[l, c], m[nl, nc], M[nl, nc])\n",
+    "                F[nl, nc] = f\n",
+    "                diff = abs(int(F[l, c]) - int(F[nl, nc]))\n",
+    "                min_img[nl, nc] = min(f, min_img[l, c])\n",
+    "                max_img[nl, nc] = max(f, max_img[l, c])\n",
+    "                deja_vu[nl, nc] = True\n",
+    "                q.push((nl, nc), diff)\n",
+    "\n",
+    "    return max_img - min_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c1b5bb-187b-465c-886d-08afdf059c31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dahu = dahu_distance_transform(m, M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c5020e-7531-47bd-bef7-280fc8772ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_image(dahu, cmap=\"inferno\")"
    ]
   }
  ],
