Implement geodesic distance transform

--- a/Dahu.ipynb
+++ b/Dahu.ipynb
@@ -144,12 +144,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec9f9bb2-0bf2-4210-942e-12e04275f3cc",
+   "id": "771de827-38ae-4df0-aa18-339f154c3328",
    "metadata": {},
    "outputs": [],
    "source": [
-    "D_fg_geos = imread(\"imgs/D_fg_geos.png\")\n",
-    "D_bg_geos = imread(\"imgs/D_bg_geos.png\")"
+    "D_fg_geos = geodesic_distance_transform(img, fg > 0)\n",
+    "D_bg_geos = geodesic_distance_transform(img, bg > 0)"
    ]
   },
   {
@@ -165,11 +165,21 @@
     "plt.imshow(marker_image)\n",
     "plt.subplot(132)\n",
     "plt.title(\"Geos Foreground\")\n",
-    "plt.imshow(D_fg_geos)\n",
+    "plt.imshow(D_fg_geos, cmap=\"inferno\")\n",
     "plt.subplot(133)\n",
     "plt.title(\"Geos Background\")\n",
-    "plt.imshow(D_bg_geos)\n",
+    "plt.imshow(D_bg_geos, cmap=\"inferno\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "532619a0-3ab4-49f6-99f2-185c96bef4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(D_fg_geos / (D_fg_geos + D_bg_geos), cmap=\"inferno_r\")"
    ]
   }
  ],
